Fix not excluding bots from generated release notes (#791)
Inspired by https://github.com/django-commons/django-simple-history/commit/c106e7ca422d4a5d03aed2bb439a4754744e9aea

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -2,8 +2,8 @@
 changelog:
   exclude:
     authors:
-      - dependabot
-      - pre-commit-ci
+      - dependabot[bot]
+      - pre-commit-ci[bot]
   categories:
     - title: PRs with deployment notes
       labels:
